# JahBrowser

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  README.tr.md  SECURITY.md
chromium-patches/: README.md  apply_branding.py
chromium-patches/faz1/: README.md  apply_jah_theme.py  jah-browser-faz1.patch  jah-release-args.gn  search-engines-submodule.patch
chromium-patches/faz1/tree-files/chrome/browser/ui/color/: jah_theme_color_mixer.cc  jah_theme_color_mixer.h
chromium-patches/faz1/tree-files/chrome/browser/ui/views/toolbar/: jah_on_air_view.cc  jah_on_air_view.h
chromium-patches/faz1/tree-files/chrome/browser/ui/webui/jah_home/: BUILD.gn  jah_home_ui.cc  jah_home_ui.h
chromium-patches/faz1/tree-files/chrome/browser/ui/webui/jah_home/resources/: jah_home_page.inc
docs/: README.md
docs/kullanim/: arama-kisayollari.md  balta-adblock.md  chat-konforu.md  coklu-yayin.md  dil-secenegi.md  emote.md  kick-entegrasyon.md  kick-twitch.md  kontrol-merkezi.md  koyu-mod.md  ses-booster.md  split-view-pip.md  stabilite.md  yayin-korumasi.md  yeni-sekme.md
jah-core/: README.md  package-lock.json  package.json  tsconfig.json
jah-core/src/: index.ts
jah-core/src/audio/: sesmasasi.test.ts  sesmasasi.ts
jah-core/src/broadcast/: broadcast.test.ts  kalkan.ts  mode.ts
jah-core/src/commands/: palet.test.ts  palet.ts
jah-core/src/emotes/: engine.test.ts  engine.ts  types.ts
jah-core/src/emotes/providers/: bttv.ts  ffz.ts  helpers.ts  kick.ts  providers.test.ts  seventv.ts
jah-core/src/engine/: mock.ts  types.ts
jah-core/src/giveaway/: kismet.test.ts  kismet.ts
jah-core/src/health/: nabiz.test.ts  nabiz.ts
jah-core/src/live/: followed.test.ts  followed.ts
jah-core/src/markers/: centik.test.ts  centik.ts
jah-core/src/moderation/: dilbekcisi.test.ts  dilbekcisi.ts
jah-core/src/obs/: client.test.ts  client.ts
jah-core/src/platform/: types.ts
jah-core/src/platform/kick/: auth.test.ts  auth.ts  chat.test.ts  chat.ts  client.ts  types.ts
jah-core/src/platform/twitch/: client.ts
jah-emotes/: jah_emotes_content.js
jah-ui/prototype/: sidebar.html  yeni-sekme.html
jah-ui/tokens/: README.md  jah-theme.css
jah-volume/: jah_volume_content.js
